--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,10 @@
         <maven.compiler>3.5.1</maven.compiler>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.0.0-M7</maven-failsafe-plugin.version>
         <maven-dependency-plugin.version>3.4.0</maven-dependency-plugin.version>
+        <kotlin.version>1.8.0-RC</kotlin.version>
 
         <owasp.esapi>2.5.1.0</owasp.esapi>
 
