Transport line check - Je twijfel aan mijn kennis eh?!?

--- a/public-transport-declarer/pom.xml
+++ b/public-transport-declarer/pom.xml
@@ -90,21 +90,23 @@
             <artifactId>esapi</artifactId>
         </dependency>
 
-        <!-- Lombok -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-parser-pdf-module -->
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-parser-pdf-module</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-parser-pdf-module -->
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.kotest</groupId>
+            <artifactId>kotest-assertions-shared-jvm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.kotest</groupId>
+            <artifactId>kotest-assertions-core-jvm</artifactId>
+        </dependency>
+
 
 
         <!-- TEST Libraries -->
@@ -127,7 +129,10 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.arrow-kt</groupId>
+            <artifactId>arrow-core-jvm</artifactId>
         </dependency>
 
     </dependencies>
