Datamodel for travelling

--- a/public-transport-declarer/pom.xml
+++ b/public-transport-declarer/pom.xml
@@ -101,10 +101,12 @@
         <dependency>
             <groupId>io.kotest</groupId>
             <artifactId>kotest-assertions-shared-jvm</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.kotest</groupId>
             <artifactId>kotest-assertions-core-jvm</artifactId>
+            <scope>test</scope>
         </dependency>
 
 
