--- a/public-transport-declarer/pom.xml
+++ b/public-transport-declarer/pom.xml
@@ -52,6 +52,13 @@
                         <goals>
                             <goal>test-compile</goal>
                         </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>
+                                    src/test/kotlin
+                                </sourceDir>
+                            </sourceDirs>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
