--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <arrow.version>1.1.4-rc.3</arrow.version>
         <kotest.version>4.0.7</kotest.version>
         <kotest-assertions.version>5.5.4</kotest-assertions.version>
+        <picocli.version>4.7.0</picocli.version>
     </properties>
 
     <dependencyManagement>
@@ -54,6 +55,11 @@
                 <groupId>org.apache.tika</groupId>
                 <artifactId>tika-core</artifactId>
                 <version>${tika.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>info.picocli</groupId>
+                <artifactId>picocli</artifactId>
+                <version>${picocli.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.arrow-kt</groupId>
