--- a/.github/workflows/public-transport-declarer.yml
+++ b/.github/workflows/public-transport-declarer.yml
@@ -10,10 +10,11 @@ jobs:
     steps:
         - uses: actions/checkout@v3
         - name: Set up JDK 17
-          uses: actions/setup-java@v3
+        - uses: graalvm/setup-graalvm@v1
           with:
+            version: 'latest'
             java-version: '17'
-            distribution: 'adopt'
+            components: 'native-image'
 
         - name: Build and Test
           run:  mvn clean install jacoco:prepare-agent package jacoco:report
@@ -24,3 +25,9 @@ jobs:
              COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
              CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
              CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+
+        - name: Build Jars
+          run: make build-maven-jar
+
+        - name: Create GraalVM image via command
+          run: make create-image
