Parses node segments

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ dependency-reduced-pom.xml
 ## Build
 public-transport-declarer
 public-transport-declarer.build_artifacts.txt
+
+## Test files
+!public-transport-declarer/src/test/resources/routes.ptd
