--- a/public-transport-declarer/pom.xml
+++ b/public-transport-declarer/pom.xml
@@ -10,6 +10,10 @@
 
     <artifactId>public-transport-declarer</artifactId>
     <name>Public Transport Declarer :: Launcher</name>
+    <properties>
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <native-maven-plugin.version>0.9.19</native-maven-plugin.version>
+    </properties>
 
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
