--- a/.github/workflows/public-transport-declarer.yml
+++ b/.github/workflows/public-transport-declarer.yml
@@ -29,4 +29,4 @@ jobs:
           run: make build-maven-jar
 
         - name: Create GraalVM image via command
-          run: make create-image
+          run: make create-native
