--- a/public-transport-declarer/pom.xml
+++ b/public-transport-declarer/pom.xml
@@ -43,6 +43,24 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <id>kapt</id>
+                        <goals>
+                            <goal>kapt</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>src/main/kotlin</sourceDir>
+                            </sourceDirs>
+                            <annotationProcessorPaths>
+                                <annotationProcessorPath>
+                                    <groupId>info.picocli</groupId>
+                                    <artifactId>picocli-codegen</artifactId>
+                                    <version>${picocli.version}</version>
+                                </annotationProcessorPath>
+                            </annotationProcessorPaths>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>compile</id>
                         <phase>process-sources</phase>
                         <goals>
@@ -152,7 +170,6 @@
             <groupId>io.arrow-kt</groupId>
             <artifactId>arrow-core-jvm</artifactId>
         </dependency>
-
     </dependencies>
 
     <profiles>
