This native approach works!

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>public-transport-declarer</module>
+        <module>pdf-native-test</module>
     </modules>
 
     <properties>
