--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
         <owasp.esapi>2.5.1.0</owasp.esapi>
 
-        <tika.version>2.6.0</tika.version>
+        <openpdf.version>1.3.30</openpdf.version>
 
         <junit-jupiter-api.version>5.9.1</junit-jupiter-api.version>
 
@@ -52,14 +52,9 @@
                 <version>${owasp.esapi}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.tika</groupId>
-                <artifactId>tika-parser-pdf-module</artifactId>
-                <version>${tika.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.tika</groupId>
-                <artifactId>tika-core</artifactId>
-                <version>${tika.version}</version>
+                <groupId>com.github.librepdf</groupId>
+                <artifactId>openpdf</artifactId>
+                <version>${openpdf.version}</version>
             </dependency>
             <dependency>
                 <groupId>info.picocli</groupId>
