--- a/.github/workflows/public-transport-declarer.yml
+++ b/.github/workflows/public-transport-declarer.yml
@@ -14,6 +14,7 @@ jobs:
             version: 'latest'
             java-version: '17'
             components: 'native-image'
+            github-token: ${{ secrets.GITHUB_TOKEN }}
 
         - name: Build and Test
           run:  mvn clean install jacoco:prepare-agent package jacoco:report
