Ignores December 12 report

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ public-transport-declarer.build_artifacts.txt
 
 ## report
 report.csv
+
+## Reports to ignore
+declaratieoverzicht_30122022182530.pdf
