--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ report.csv
 
 ## Reports to ignore
 declaratieoverzicht_30122022182530.pdf
+declaratieoverzicht_22122022110627.pdf
+declaratieoverzicht_28022023190418.pdf
