--- a/pom.xml
+++ b/pom.xml
@@ -18,23 +18,25 @@
     <properties>
         <java.version>17</java.version>
         <maven.compiler>3.5.1</maven.compiler>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>3.0.0</maven-failsafe-plugin.version>
         <maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
         <maven-shade-plugin.version>3.4.1</maven-shade-plugin.version>
-
-        <spring-boot-maven-plugin.version>3.0.5</spring-boot-maven-plugin.version>
+        <build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
+        <native-maven-plugin.version>0.9.20</native-maven-plugin.version>
 
         <kotlin.version>1.8.20</kotlin.version>
 
+        <spring-boot-maven-plugin.version>3.0.5</spring-boot-maven-plugin.version>
         <owasp.esapi>2.5.1.0</owasp.esapi>
 
         <openpdf.version>1.3.30</openpdf.version>
+        <kotlin-csv.version>1.9.0</kotlin-csv.version>
 
         <junit-jupiter-api.version>5.9.2</junit-jupiter-api.version>
-
         <omni-coveragereporter-maven-plugin.version>0.4.2</omni-coveragereporter-maven-plugin.version>
         <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
         <arrow.version>1.1.5</arrow.version>
