--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ public-transport-declarer.build_artifacts.txt
 ## Test files
 !public-transport-declarer/src/test/resources/routes.ptd
 !public-transport-declarer/src/test/resources/transacties_31032023194834.csv
-
+!public-transport-declarer/src/test/resources/transacties_31052023161105.csv
 ## report
 report.csv
 
