--- a/public-transport-declarer/Makefile
+++ b/public-transport-declarer/Makefile
@@ -1,3 +1,5 @@
+SHELL := /bin/bash
+
 b: build-maven
 build-maven:
 	mvn clean install -Pjar
@@ -16,3 +18,5 @@ just-install-locally:
 remove-locally:
 	sudo rm /usr/local/bin/public-transport-declarer
 jar: build-maven
+generate-last-via-csv:
+	java -jar target/public-transport-declarer.jar -o $(shell ls -l *.csv | tail -n1 | cut -d" " -f9) -g 10 -d report.csv -l Arnhem,Velp,Schipol,Eindhoven,Amstelveenseweg,Ede,Wageningen,Amsterdam,Zoetermeer,Hertogenbosch,Airport,Leidsche -r routes.txt
