--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,22 +14,22 @@ jobs:
       - checkout
 
       - run:
-          name: Install SDK 17
-          command: wget https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-x64_bin.tar.gz &&
-            tar xvf openjdk-17.0.2_linux-x64_bin.tar.gz &&
-            sudo mv jdk-17*/ /opt/jdk17 &&
-            export JAVA_HOME=/opt/jdk17 &&
+          name: Install SDK 21
+          command: wget https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.3%2B9/OpenJDK21U-jdk_x64_linux_hotspot_21.0.3_9.tar.gz &&
+            tar -xvf OpenJDK21U-jdk_x64_linux_hotspot_21.0.3_9.tar.gz &&
+            sudo mv jdk-21*/ /opt/jdk21 &&
+            export JAVA_HOME=/opt/jdk21 &&
             export PATH=$PATH:$JAVA_HOME/bin
 
       - run:
           name: Build
-          command: export JAVA_HOME=/opt/jdk17 &&
+          command: export JAVA_HOME=/opt/jdk21 &&
               export PATH=$PATH:$JAVA_HOME/bin &&
               mvn -B -DskipTests clean package
 
       - run:
           name: Test
-          command: export JAVA_HOME=/opt/jdk17 &&
+          command: export JAVA_HOME=/opt/jdk21 &&
               export PATH=$PATH:$JAVA_HOME/bin &&
               mvn test
 
