--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,12 @@ updates:
           - "*maven*"
       kotlin:
         patterns:
-          - "*kotlin*"
+          - "kotlin-stdlib"
+          - "kotlin-maven-plugin"
+      kotlin-csv:
+        patterns:
+          - "kotlin-csv-jvm"
+          - "kotlin-csv-js"
       spring:
         patterns:
           - "*spring*"
