Updates to com.jsoizo

--- a/public-transport-declarer/pom.xml
+++ b/public-transport-declarer/pom.xml
@@ -153,14 +153,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.doyaaaaaken</groupId>
+            <groupId>com.jsoizo</groupId>
             <artifactId>kotlin-csv-jvm</artifactId>
-            <version>${doyaaaaaken.csv.version}</version>
+            <version>${com.jsoizo.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.doyaaaaaken</groupId>
+            <groupId>com.jsoizo</groupId>
             <artifactId>kotlin-csv-js</artifactId>
-            <version>${doyaaaaaken.csv.version}</version>
+            <version>${com.jsoizo.version}</version>
         </dependency>
 
 
