--- a/.github/workflows/public-transport-declarer.yml
+++ b/.github/workflows/public-transport-declarer.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v4
-        - uses: graalvm/setup-graalvm@v1
+        - uses: graalvm/setup-graalvm@!
           with:
             version: 'latest'
             java-version: '21'
